Using IOUtils to read changelog release notes template